--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "ogl": "^1.0.11",
     "react": "19.1.0",
