--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server.js",
     "dev": "node --watch --env-file=.env ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
